shader descriptions now show up when hovering additions, and when hovering add command suggestions